# shoppingcart-backend-rs

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: load.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/kafka-consumer/: Cargo.toml
crates/kafka-consumer/src/: lib.rs
crates/kafka-producer/: Cargo.toml
crates/kafka-producer/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
migrations/: 001_create_tables.sql
monitoring/grafana/provisioning/dashboards/: dashboard.yml  db-metrics.json  kafka-metrics.json
monitoring/prometheus/: prometheus.yml  rules.yml
static/: index.html
