[workspace]
members = [
    "crates/app"
]

# Опционально: общие зависимости и их версии для всех workspace members
[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.39", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
prometheus = "0.14"
rdkafka = { version = "0.37", features = ["tokio"] }
config = "0.15.11"
dotenvy = "0.15.7"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
