[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = "0.12"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
app_config = { workspace = true }