[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }
cache = { path = "../cache" }
kafka-producer = { path = "../kafka-producer" }
app_config = { path = "../config" }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }