[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
deadpool-postgres = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
model = { path = "../model" }
repository = { path = "../repository" }
tracing = { workspace = true }